# ESP32C3-FPM383D-LD2410B-DS18B20

./: .gitmodules  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old  指纹录制.md  测试记录
components/ability_framework/: CMakeLists.txt  ability_conext.hpp  api_AbilityRequest_handler.cpp  api_AbilityRunning_handler.cpp  api_AbilitySupport_handler.cpp  api_Devices_handler.cpp  echo_handler.cpp  handler_common.hpp  handles.hpp  hello_handler.cpp
components/sensors/: CMakeLists.txt  serial.c  serial.h
components/sensors/DS18B20/: DS18B20.c  DS18B20.h
components/sensors/FPM_383D/: FPM_383D.c  FPM_383D.h
components/sensors/LD2410B/: LD2410B.c  LD2410B.h
components/udp_broadcast/: CMakeLists.txt  udp_broadcast.c  udp_broadcast.h
components/wifi_config/: CMakeLists.txt  config_wifi.c  config_wifi.h
doc/上位机/FPM-383/FPM383C-80x64/: config.ini  result.xlsx  指纹上位机使用指南.pdf:Zone.Identifier
doc/上位机/LD2410B/: appConfig.xml
doc/串口工具/串口/: FPM串口调试记录.TXT  sscom51.ini
main/: CMakeLists.txt  sensor.pb.cpp  sensor.pb.hpp  wifi_info.hpp
main/DS18B20/: main.c  main.cpp
main/FAN/: main.cpp
main/FPM_383D/: ability_context.cpp  main.c  main.cpp
main/LD2410B/: ability_context.cpp  main.c  main.cpp
main/wifi_static_ip/: main.cpp
main_client/: Makefile  audio.proto  client.cpp  sensor.pb.cpp  sensor.pb.hpp  sensor.proto  simpleclient
